--- a/object.html
+++ b/object.html
@@ -10,32 +10,24 @@
 	<script>
 	window.onload = function(){
 		function Person(name, gender){
-
-			let _name = name		// private
-			let _gender = gender	
-			let _age
-
-			this.getName = function(){
-				return _name
-			}
-			this.getGender = function(){
-				return _gender
-			}
-			this.setAge = function(age){
-				_age = age
-			}
-			this.getAge = function(){
-				return _age
-			}
-			this.toString = function(){
-				return `${person1.getName()}, ${person1.getGender()}, ${person1.getAge()}`
-			}	
+			let _name, _gender, _age
 		}
+		// this는 프로토타입을 가리킴
+		// 프로토타입 프로퍼티에 기능 추가
+		Person.prototype.getName = function(){ return _name }
+		Person.prototype.getGender = function(){ return _gender }
+		Person.prototype.getAge = function(){ return _age }
+		Person.prototype.setAge = function(age){ _age = age }
+		Person.prototype.toString = function(){ 
+			return `${person.getName()}, ${person.getGender()}, ${person.getAge()}` 
+		}
+		// person의 프로토타입 객체 : Person
+		// person은 부모는 객체의 프로퍼티
+		let person = new Person('홍길동', '남')
+		person.setAge('18')
 
-		let person1 = new Person('홍길동', '남')
-		person1.setAge('18')
 
-		alert(person1.toString())
+		alert(person.toString())
 	}
 	</script>
 </body>
