--- a/animal.html
+++ b/animal.html
@@ -6,64 +6,29 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 	<script src="animal.js"></script>
+	<script src="animalService.js"></script>
 </head>
 <body>
 <script>
-/* animal.js로 이동 
-function Animal(name){	
-	this.name = name 
-}
-function Human(){	
-	Animal.apply(this, arguments) 
-}	
-function SuperHero(){	
-	Human.apply(this, arguments) 
-}
-function Main(){
-	return {
-		test : function(){
-			alert('클로저 테스트')
-			Animal.prototype.setName = function(name){
-				this.name = name
-			}
-			Animal.prototype.getName = function(){
-				return this.name
-			}
-		}
-	}
-} */
+
 window.onload = function(){
 	
-	//기능 추가
-/* 	Animal.prototype.setName = function(name){
-		this.name = name
-	}
-	Animal.prototype.getName = function(){
-		return this.name
-	} */
+	const init = new Initializer()
+	init.animal()
 
-	let main = new Main()
-	main.test()
-
-	let a = new Animal('고양이')
+	const a = new Animal()
 	a.setName('고양이')
 	alert(`동물 이름 : ${a.getName()}`)
 
-	Human.prototype = new Animal()
-	Human.prototype.setName = function(){
-		alert(`Human SetName : ${this.name}`)
-	}
-	let b = new Human('인간')
-	b.setName()
+	init.human()
+	let b = new Human()
+	b.setName('홍길동')
+	alert(`사람 이름 : ${b.test()}`)
 
-	SuperHero.prototype = new Human()
-	SuperHero.prototype,setName = function(){
-		alert(`SuperHero SetName : ${this.name}`)
-	}
-	let c = new SuperHero('슈퍼히어로')
-	c.setName()
-
-
+	init.superHero()
+	let c = new SuperHero()
+	c.setName('아이언맨')
+	alert(`슈퍼 히어로 이 : ${c.test()}`)
 }	
 </script>
 </body>
