--- a/VendingMachine.html
+++ b/VendingMachine.html
@@ -8,6 +8,7 @@
 	<script src="componant.js"></script>
 	<script src="VendingMachine.js"></script>
 	<script src="VendingMachineService.js"></script>
+	<script src="VendingMachineUtil.js"></script>
 </head>
 <body>
 <div id="box">
@@ -26,9 +27,15 @@ window.onload = function(){
 	const br = new Factory('br')
 	const $box = document.getElementById('box')
 
-	$box.appendChild(inputText.make())
+/* 	$box.remove()
+	const div = new Factory('div')
+	document.body.appendChild(div.make('box'))
+	const $box = document.getElementById('box')
+ */
+	$box.innerHTML = ''
+	$box.appendChild(inputText.make('val', 'text'))
 	$box.appendChild(br.make())
-	$box.appendChild(inputButton.make())
+	$box.appendChild(inputButton.make('btn', 'button', '동전투입'))
 	
 	const $btn = document.getElementById('btn')
 
@@ -37,6 +44,68 @@ window.onload = function(){
 	//	alert(`${$val.value}`)
 		const vms = new VendingMachineService()
 		vms.insertCoin($val.value)
+		
+		$box.innerHTML = ''
+		const div = new Factory('div')
+		
+		$box.appendChild(div.make('coke'))
+		const coke = document.getElementById('coke')
+		coke.textContent = '1. 콜라 - 700원'
+
+		$box.appendChild(div.make('cider'))
+		const cider = document.getElementById('cider')
+		cider.textContent = '2. 사이다 - 800원'
+
+		$box.appendChild(div.make('juice'))
+		const juice = document.getElementById('juice')
+		juice.textContent = '3. 쥬스 - 1000원'
+
+		const inputText = new Factory('inputText')
+		const inputButton = new Factory('inputButton')
+		const br = new Factory('br')
+		box.appendChild(br.make())
+		box.appendChild(inputText.make('menu','text'))
+		box.appendChild(br.make())
+		box.appendChild(inputButton.make('btn','button','메뉴선택'))
+
+		$box.appendChild(div.make('coin'))
+		const coin = document.getElementById('coin')
+		const init = new Initializer()
+		init.vendingMachine()
+		const vm = new VendingMachine()
+		coin.textContent = `${vm.getChange()}원`
+
+		const $menu = document.getElementById('menu')
+		const $btn = document.getElementById('btn')
+	//	const util = new Looping()
+
+		// alert(util.forTest([1, 2, 3, 4, 5, 6, 7, 8, 9, 10]))
+		// alert(util.forEachTest([11, 12, 13, 14, 15, 16, 17, 18, 19, 20]))
+		// alert(util.mapTest([31, 32, 33, 34, 35, 36, 37, 38, 39, 40]))
+		// alert(util.findTest([41, 42, 43, 44, 45, 46, 47, 48, 49, 50]))
+	 	/*alert(util.findTest2([{ id : 41, name : '사십일'},
+							  { id : 42, name : '사십이'}, 
+							  { id : 43, name : '사십삼'}, 
+							  { id : 44, name : '사십사'}, 
+							  { id : 45, name : '사십오'}], 0)) */
+		
+		// alert(util.reduceTest([1, 2, 3, 4, 5]))
+		// alert(util.filterTest([21, 22, 23, 24, 25, 26, 27, 28, 29, 30]))
+		/* alert(util.ofTest([{ id : 41, name : '사십일'},
+							{ id : 42, name : '사십이'}, 
+							{ id : 43, name : '사십삼'}, 
+							{ id : 44, name : '사십사'}, 
+							{ id : 45, name : '사십오'}])) */
+		// alert(util.fromTest([1, 2, 3]))
+		// alert(util.argumentsTest(1, 2, 3, 4, 5))
+		// alert(util.joinTest('안녕', '내', '친구'))
+		// alert(util.sortTest('4', '2', '5', '1', '3'))	
+		// alert(util.reverseTest('4', '2', '5', '1', '3'))	
+
+		// argument가 객체일 때
+ 		/*alert(util.todos([{ id: 4, content: 'JavaScript' },
+					 	  { id: 1, content: 'HTML' },
+						  { id: 2, content: 'CSS' } ])) */
 	})
 
 }
